generated/checker-for-evaluation/generated/test-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/2/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:17:17: error: ‘taint’ is not a namespace-name
   17 | using namespace taint;
      |                 ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::MemCpyNumTripsVisitor::VisitCallExpr(clang::CallExpr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:43:61: error: no matching function for call to ‘clang::ento::CheckerContext::CheckerContext(clang::ASTContext&)’
   43 |     if (ExprHasName(CalleeExpr, "memcpy", CheckerContext(Ctx))) {
      |                                                             ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:9:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note: candidate: ‘clang::ento::CheckerContext::CheckerContext(clang::ento::NodeBuilder&, clang::ento::ExprEngine&, clang::ento::ExplodedNode*, const clang::ProgramPoint&, bool)’
   41 |   CheckerContext(NodeBuilder &builder,
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note:   candidate expects 5 arguments, 1 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(const clang::ento::CheckerContext&)’
   24 | class CheckerContext {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   no known conversion for argument 1 from ‘clang::ASTContext’ to ‘const clang::ento::CheckerContext&’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(clang::ento::CheckerContext&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   no known conversion for argument 1 from ‘clang::ASTContext’ to ‘clang::ento::CheckerContext&&’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportBug(const clang::Decl*, clang::ento::BugReporter&, const clang::SourceManager&, clang::SourceLocation, clang::SourceLocation) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:164:3: error: ‘DiagnosticLocation’ was not declared in this scope
  164 |   DiagnosticLocation DL = DiagnosticLocation::create(D, SM);
      |   ^~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:166:61: error: ‘DL’ was not declared in this scope; did you mean ‘D’?
  166 |       *BT, "Buffer copied before num_trips is initialized", DL.asLocation());
      |                                                             ^~
      |                                                             D
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
